<?xml version="1.0"?>
<package format="2">
  <name>fleet_mission</name>
  <version>0.0.1</version>
  <description>Fleet Mission API and ROS nodes</description>
  <maintainer email="faridsahebsara@gmail.com">your_name</maintainer>
  <license>License</license>
  
  <depend>rclpy</depend>
  <depend>example_interfaces</depend>  <!-- If you use pre-defined actions like Fibonacci -->
  <depend>action_msgs</depend>
  <depend>fleet_mission</depend>  
  
  <build_depend>ament_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>  <!-- Required for custom action generation -->
  <exec_depend>ament_cmake</exec_depend>

  <export>
    <action_depend>fleet_mission</action_depend>  <!-- Specify action dependency -->
  </export>
</package>
